--- a/hypeanimationswordpress-master/css/hypanimations.css
+++ b/hypeanimationswordpress-master/css/hypanimations.css
@@ -4,14 +4,14 @@ table.dataTable tbody tr:last-child td { border-bottom:0px; }
 table.dataTable { width:98% !important; }
 .animdelete { background:#FF0000;margin:1px;color:#FFF;padding:5px;border:1px solid #FF0000;-webkit-border-radius: 50px;-moz-border-radius: 50px;border-radius: 50px;text-decoration:none; }
 .animdelete:hover { color:#FF0000;background:#fff; }
-.animupdate {background:#0099cc;margin:1px;color:#FFF;padding:5px;border:1px solid #0099cc;-webkit-border-radius: 50px;-moz-border-radius: 50px;border-radius: 50px;text-decoration:none; }
-.animupdate:hover { color:#0099cc;background:#fff; }
+.animupdate {background:#0000cc;margin:1px;color:#FFF;padding:5px;border:1px solid #0000cc;-webkit-border-radius: 50px;-moz-border-radius: 50px;border-radius: 50px;text-decoration:none; }
+.animupdate:hover { color:#0000cc;background:#fff; }
 pre { padding:10px;background:#eee;border:1px solid #eee; }
 pre:hover { background:#FFF;border:1px solid #07bee5;color:#07bee5;font-weight:bold;}
 .hypeanimbloc { display:inline-block;padding:10px;background:#FFF;border:1px solid #000;color:#000; }
-.eraabout { display:none;float:right; padding-right:20px; }
+.eraabout { float:right; padding-right:20px; }
 .eraabout h2 { text-align:right; }
-.eralink { color:#0099cc; }
+.eralink { color:#07bee5; }
 .eralogo {
 	position:absolute;
 	top:10px;
@@ -34,7 +34,7 @@ pre:hover { background:#FFF;border:1px solid #07bee5;color:#07bee5;font-weight:b
 	margin-top: 3px;
 }
 #choosehypeanimation {
-	background:#0099cc;
+	background:#336699;
 	color:#FFF;
 	padding:5px;
 	border:0;
@@ -62,8 +62,6 @@ pre:hover { background:#FFF;border:1px solid #07bee5;color:#07bee5;font-weight:b
 }
 .droitefermer {
   float:right;
-  font-weight: bold;
-  font-size:1.5em;
 }
  
 .oModal {
@@ -125,4 +123,73 @@ pre:hover { background:#FFF;border:1px solid #07bee5;color:#07bee5;font-weight:b
  
 .oModal > div section,.oModal > div > header, .oModal > div > footer {
   padding:15px;
+}
+
+.animcopy {
+    background: #009976;
+    margin: 1px;
+    color: #FFF;
+    padding: 5px;
+    border: 1px solid #009976;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+    text-decoration: none;
+}
+.animcopy:hover { color:#009976;background:#fff; }
+
+.popup-wrap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 9999;
+    background: rgba(0, 0, 0, 0.2);
+}
+
+/*.popup-overlay {
+    position: relative;
+}*/
+
+.popup {
+    background: #fff;
+    height: 200px;
+    width: 500px;
+    margin: 15% auto;
+    top: 30%;
+    position: relative;
+}
+
+span.close-popup {
+    position: absolute;
+    right: 5px;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    text-align: center;
+    font-weight: 600;
+    z-index: 999999;
+    cursor: pointer;
+    top: 4px;
+    box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.5);
+}
+
+textarea.copydata {
+    padding: 20px 20px 0 20px;
+}
+span.copied {
+    display: none;
+    position: absolute;
+    background: #0f0;
+    padding: 5px;
+    width: 60px;
+    text-align: center;
+    font-weight: 600;
+    left: 43%;
+    top: 40%;
+}
+h3.popup-heading {
+    text-align: center;
+    margin: 0;
+    padding: 10px 0;
 }
