--- a/hypeanimationswordpress-master/css/hypeanimations.css
+++ b/hypeanimationswordpress-master/css/hypeanimations.css
@@ -1,4 +1,3 @@
-
 @import "https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,500|Montserrat";
 
 table.dataTable tbody td { border-left:1px solid #000;border-bottom:1px solid #000;text-align:center; }
@@ -271,11 +270,11 @@ span.copied {
     position: absolute;
     background: #0f0;
     padding: 5px;
-    width: 60px;
+    width: auto;
     text-align: center;
     font-weight: 600;
-    left: 43%;
-    top: 40%;
+    left: 36%;
+    top: 50%;
 }
 h3.popup-heading {
     text-align: center;
