--- a/hypeanimationswordpress-master/css/hypeanimations.css
+++ b/hypeanimationswordpress-master/css/hypeanimations.css
@@ -1,5 +1,3 @@
-@import "https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,500|Montserrat";
-
 table.dataTable tbody td { border-left:1px solid #000;border-bottom:1px solid #000;text-align:center; }
 table.dataTable tbody td:last-child { border-right:1px solid #000; }
 table.dataTable tbody tr:last-child td { border-bottom:0px; }
@@ -10,7 +8,7 @@ table.dataTable { width:98% !important; }
   border: #eee solid 2px;
   color: #eee;
   display:inline-block;
-  font-family: 'Montserrat', 'Helvetica Neue', arial, sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
   letter-spacing: 3px;
   font-size:14px;
   font-weight: 400;
@@ -21,6 +19,7 @@ table.dataTable { width:98% !important; }
   padding: 3px 22px;
   margin-bottom: 8px;
   word-spacing: normal;
+  line-height: 1.1em;
 }
 
 .animdelete {
@@ -85,9 +84,9 @@ pre:hover { background:#FFF;border:1px solid #07bee5;color:#07bee5;font-weight:b
     min-height: 100px !important;
 	background:#eee !important;
 }
-.animdelete { background:#FF0000;margin:1px;color:#FFF;padding:5px;border:1px solid #FF0000;-webkit-border-radius: 50px;-moz-border-radius: 50px;border-radius: 50px;text-decoration:none; }
+.animdelete { background:#FF0000;margin:1px;color:#FFF;padding:5px;border:1px solid #FF0000;-webkit-border-radius: 15px;-moz-border-radius: 15px;border-radius: 15px;text-decoration:none; }
 .animdelete:hover { color:#FF0000;background:#fff; }
-.animupdate {background:#0099cc;margin:1px;color:#FFF;padding:5px;border:1px solid #0099cc;-webkit-border-radius: 50px;-moz-border-radius: 50px;border-radius: 50px;text-decoration:none; }
+.animupdate {background:#0099cc;margin:1px;color:#FFF;padding:5px;border:1px solid #0099cc;-webkit-border-radius: 15px;-moz-border-radius: 15px;border-radius: 15px;text-decoration:none; }
 .animupdate:hover { color:#0099cc;background:#fff; }
 pre { padding:10px;background:#eee;border:1px solid #eee; }
 pre:hover { background:#FFF;border:1px solid #07bee5;color:#07bee5;font-weight:bold;}
@@ -219,9 +218,9 @@ pre:hover { background:#FFF;border:1px solid #07bee5;color:#07bee5;font-weight:b
     color: #FFF;
     padding: 5px;
     border: 1px solid #009976;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    border-radius: 50px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
     text-decoration: none;
 }
 .animcopy:hover { color:#009976;background:#fff; }
@@ -268,11 +267,12 @@ textarea.copydata {
 span.copied {
     display: none;
     position: absolute;
-    background: #0f0;
+    background: #009976;
     padding: 5px;
     width: auto;
     text-align: center;
     font-weight: 600;
+	color:#ffffff;
     left: 36%;
     top: 50%;
 }
@@ -288,4 +288,8 @@ h3.popup-heading {
 
 .toplevel_page_hypeanimations_panel #wpfooter {
     position: static;
+}
+
+.dropzone .dz-preview .dz-details .dz-filename:not(:hover) {
+    margin-top: 30px;
 }
